# paper_reading

./: .env.example  .gitignore  QUICKSTART.md  README.md  paper_analyzer.db  pyproject.toml
feishu_paper_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
paper_analyzer/: __init__.py  config.py  constants.py  database.py  main.py  models.py  schemas.py  utils.py
paper_analyzer/api/: routes.py
paper_analyzer/clients/: feishu.py  llm.py
paper_analyzer/extractors/: arxiv.py  pdf.py
paper_analyzer/services/: analysis.py  chunking.py  jobs.py  local_runner.py  prompts.py  source_loader.py  worker.py
tests/: conftest.py  test_analysis_schema.py  test_arxiv.py  test_jobs.py  test_source_loader.py  test_webhook.py  test_worker.py
